<resources>
    <string name="app_name">LifeLine 24–7</string>
    <string name="image_logo">image_logo</string>
    <string name="get_started">Get started</string>
    <string name="abc">abc</string>
    <string name="lifeline_24_7">LifeLine 24/7</string>
    <string name="already_registered_sign_in">Already Registered , Sign In !</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="type_your_email">Type your Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome">Welcome</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="location">Location</string>
    <string name="accident_date">Accident Date</string>
    <string name="attach_photo_optional">Attach Photo (Optional)</string>
    <string name="submit_report">Submit Report</string>
    <string name="description">Description</string>
    <string name="location_info_will_appear_here">Location info will appear here</string>
    <string name="admin_email">Admin Email</string>
    <string name="login">Login</string>
    <string name="date">Date</string>
    <string name="admin_token">Admin Token</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="fire_report">Fire Report</string>
    <string name="enter_description_of_the_fire">Enter Description of the Fire</string>
    <string name="enter_location">Enter Location</string>
    <string name="imagepreview">ImagePreview</string>
    <string name="upload_image">Upload Image</string>
    <string name="enter_description">Enter Description</string>
    <string name="traffic_issue_reporting">Traffic Issue Reporting</string>
    <string name="describe_the_traffic_issue">Describe the Traffic Issue</string>
    <string name="enter_the_location">Enter the Location</string>
    <string name="description_of_the_issue">Description of the issue</string>
    <string name="location_of_the_issue">Location of the issue</string>
    <string name="enter_issue_description">Enter issue description</string>
    <string name="enter_issue_location">Enter issue location</string>
    <string name="traffic_issue">Traffic Issue</string>
    <string name="admin_login">Admin Login</string>
    <string name="sign_up_lifeline_24_7">Sign up Lifeline 24/7</string>
    <string name="enter_emergency_details">Enter Emergency Details</string>
    <string name="personal_account">Personal Account</string>
</resources>