<!-- activity_admin_signup.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/main"
    android:gravity="center">
<TextView
    android:layout_width="match_parent"
    android:layout_height="50dp"
   android:text="@string/sign_up_lifeline_24_7"
    android:fontFamily="casual"
    android:textSize="35dp"
    android:layout_marginBottom="30dp"
    />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:lottie_rawRes="@raw/signinanim"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/admin_email"
        android:inputType="textEmailAddress"
        android:padding="16dp" />


    <EditText
        android:id="@+id/token_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/admin_token"
        android:inputType="textEmailAddress"
        android:padding="16dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:padding="16dp" />

    <TextView
        android:id="@+id/signInRedirectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:text="@string/already_have_an_account_sign_in"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:clickable="true"/>


    <TextView
        android:id="@+id/admin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/personal_account"
        android:textColor="?android:textColorLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_button" />
</LinearLayout>
