<?xml version="1.0" encoding="utf-8"?>
<!-- activity_fire_report.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Report Form -->
    <TextView
        android:id="@+id/reportTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fire_report"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description"
        android:inputType="textMultiLine"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/editLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:inputType="text"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnUploadImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_image" />

    <Button
        android:id="@+id/submitReportButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_report"
        android:layout_marginTop="16dp" />

    <!-- RecyclerView to display Fire Reports -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewReports"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1" />
</LinearLayout>
