<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#9704E2FF"
    tools:context=".activity_admin_login">
    <!-- activity_admin_login.xml -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/welcome"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:textSize="35sp"
            android:gravity="center"
            />
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintTop_toBottomOf="@+id/welcome"
            app:layout_constraintBottom_toTopOf="@+id/username"
            app:layout_constraintLeft_toLeftOf="parent"
            android:foregroundGravity="center"
            android:layout_marginStart="90dp"
            app:lottie_rawRes="@raw/newsignin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="serif"

            android:gravity="center"
            android:text="@string/admin_login"

            android:textSize="26sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/admin_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>